test/tests/stages/17_supporting_dynamic_memory_allocation/valid/void_pointer/simple.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: malloc
        List[1]: 
          TIdentifier: size
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            ULong: 
          Pointer: 
            Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: free
        List[1]: 
          TIdentifier: ptr
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Void: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: array
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: malloc
                      List[1]: 
                        CBinary: 
                          CMultiply: 
                          CConstant: 
                            CConstInt: 
                              TInt: 10
                            None: 
                          CSizeOfT: 
                            Int: 
                            None: 
                          None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: array
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CSingleInit: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: array
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: free
                  List[1]: 
                    CVar: 
                      TIdentifier: array
                      None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: result
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
